--- a/torrentflux/themes/RedRound/css/mainLayout.css
+++ b/torrentflux/themes/RedRound/css/mainLayout.css
@@ -279,11 +279,13 @@ table#UsersOffline {
 }
 
 #indexWget {
-	margin: 0 auto;
-	min-height: 128px; height: 128px; /* IE6 */
-	padding-top: 25px;
-	padding-left: 100px;
-	background: #fff url('../images/index/Wget/bg.png') no-repeat top left;
+        margin: 0 auto;
+        min-height: 50px; height: 50px; /* IE6 */
+        padding-top: 5px;
+        padding-left: 60px;
+        margin-left: 10px;
+        margin-right: 10px;
+        background: #fff url('../images/index/Wget/bg.png') no-repeat 0px 5px;
 }
 
 #indexNZBPerl {
